--- a/src/views/Process/Dashboard.scss
+++ b/src/views/Process/Dashboard.scss
@@ -70,3 +70,13 @@
 @import url("diagram-js-minimap/assets/diagram-js-minimap.css");
 @import url("bpmn-js/dist/assets/diagram-js.css");
 @import url("bpmn-js/dist/assets/bpmn-font/css/bpmn.css");
+@import url("https://cdn.jsdelivr.net/npm/font-awesome@4.x/css/font-awesome.min.css");
+
+.highlight:not(.djs-connection) .djs-visual > :nth-child(1) {
+  fill: green !important; /* color elements as green */
+}
+
+foreignObject{
+  width: 100%;
+  height: 100%;
+}
