--- a/src/views/Process/Dashboard.scss
+++ b/src/views/Process/Dashboard.scss
@@ -80,3 +80,22 @@ foreignObject{
   width: 100%;
   height: 100%;
 }
+
+.project-name {
+  padding-top: 3%;
+  padding-bottom: 3%;
+  cursor: pointer;
+}
+
+.tool-name {
+  padding-top: 5%;
+  padding-bottom: 5%;
+}
+
+ul {
+  list-style-type: none;
+}
+
+.padding-card {
+  padding-bottom: 7%;
+}
