--- a/src/views/Process/Dashboard.scss
+++ b/src/views/Process/Dashboard.scss
@@ -84,7 +84,44 @@ foreignObject{
 .project-name {
   padding-top: 3%;
   padding-bottom: 3%;
+  padding-left: 3%;
   cursor: pointer;
+  display: flex;
+  justify-content: left;
+  color: #2c3e50;
+}
+
+.project-name:hover {
+  color: #FB8500;
+}
+
+.project-name-2 {
+  padding-top: 3%;
+  padding-bottom: 3%;
+  padding-left: 3%;
+  cursor: pointer;
+  display: flex;
+  justify-content: left;
+  color: #2c3e50;
+}
+
+.project-name-2:hover {
+  color: #FB8500;
+}
+
+.project-name-3 {
+  padding-top: 3%;
+  padding-bottom: 3%;
+  padding-left: 10%;
+  cursor: pointer;
+  display: flex;
+  justify-content: left;
+  color: #2c3e50;
+  font-weight: bold;
+}
+
+.project-name-3:hover {
+  color: #FB8500;
 }
 
 .tool-name {
@@ -98,4 +135,30 @@ ul {
 
 .padding-card {
   padding-bottom: 7%;
+}
+
+svg {
+  height: 100%;
+  width: 100%;
+}
+
+.disp-left {
+  display: flex;
+  justify-content: left;
+}
+
+.disp-center {
+  padding-top: 10%;
+}
+
+.font-class-2 {
+  font-size: 85%;
+}
+
+.disp-inline {
+  display: inline-block;
+}
+
+.title-color {
+  color: #2c3e50;
 }
