Se crean desarrolladores

--- a/src/views/Team/Team.scss
+++ b/src/views/Team/Team.scss
@@ -49,3 +49,11 @@ ul {
     justify-content: left;
     margin-bottom: 3%;
 }
+
+
+.dash-btn.v-btn.v-size--default {
+    font-size: large;
+    background-color: #FB8500;
+    font-weight: bold;
+    color: white;
+}
