--- a/src/views/Process/Dashboard.scss
+++ b/src/views/Process/Dashboard.scss
@@ -162,3 +162,11 @@ svg {
 .title-color {
   color: #2c3e50;
 }
+
+.mx-1.mb-1.card-color {
+  //background-color: #FFB703;
+}
+
+.back-color {
+  //background-color: #8ECAE6;
+}
