--- a/src/views/Team/Team.scss
+++ b/src/views/Team/Team.scss
@@ -22,6 +22,13 @@
     float: none;
     padding-bottom: 2%;
     cursor: pointer;
+    display: flex;
+    justify-content: left;
+}
+
+.item-2 {
+    display: flex;
+    justify-content: left;
 }
 
 .add-btn {
