--- a/src/views/Process/Dashboard.scss
+++ b/src/views/Process/Dashboard.scss
@@ -163,10 +163,35 @@ svg {
   color: #2c3e50;
 }
 
-.mx-1.mb-1.card-color {
-  //background-color: #FFB703;
+.jira-title {
+  font-weight: bold;
+  color: black;
+  display: flex;
+  justify-content: left;
+  cursor: default;
 }
 
-.back-color {
-  //background-color: #8ECAE6;
+.jenkins-title {
+  font-weight: bold;
+  color: black;
+  display: flex;
+  justify-content: left;
+  cursor: default;
+  flex-wrap: wrap;
+}
+
+.github-title {
+  font-weight: bold;
+  color: black;
+  display: flex;
+  justify-content: left;
+  cursor: default;
+  margin-left: 3%;
+}
+
+.question-mark {
+  font-size: small;
+  font-weight: normal;
+  color: gray;
+  margin-left: 3%;
 }
