--- a/src/views/Process/Dashboard.scss
+++ b/src/views/Process/Dashboard.scss
@@ -195,3 +195,14 @@ svg {
   color: gray;
   margin-left: 3%;
 }
+
+.total {
+  display: flex;
+  justify-content: left;
+  margin-left: 3%;
+}
+
+.total-2 {
+  display: flex;
+  justify-content: left;
+}
