--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -9,7 +9,7 @@ body {
   .main-part {
     width: 100%;
     height: 100vh;
-    background-color: #023047;
+    background-color: #05006b;
     display: flex;
     flex-direction: column;
     justify-content: center;
