--- a/src/styles/_base.scss
+++ b/src/styles/_base.scss
@@ -117,3 +117,8 @@
       }
     }
   }
+
+.navbar-color {
+  background: rgb(85,1,194);
+  background: linear-gradient(124deg, rgba(85,1,194,1) 8%, rgba(0,170,255,1) 100%);
+}
