--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -9,7 +9,8 @@ body {
   .main-part {
     width: 100%;
     height: 100vh;
-    background-color: #05006b;
+    background: rgb(85,1,194);
+    background: linear-gradient(124deg, rgba(85,1,194,1) 8%, rgba(0,170,255,1) 100%);
     display: flex;
     flex-direction: column;
     justify-content: center;
@@ -21,15 +22,16 @@ body {
       align-items: center;
       h1 {
         text-align: center;
-        font-family: "Roboto", sans-serif;
+        font-family: 'Fira Sans Condensed';
         font-size: 70px;
         color: white;
-        font-weight: 500;
+        font-weight: bold;
       }
       h5 {
           color: white;
           padding-left: 10%;
           padding-right: 10%;
+          font-family: 'Fira Sans Condensed';
       }
       .v-image {
         margin-bottom: 32px;
