--- a/src/views/Login/Login.scss
+++ b/src/views/Login/Login.scss
@@ -9,8 +9,8 @@ body {
   .main-part {
     width: 100%;
     height: 100vh;
-    background: rgb(85,1,194);
-    background: linear-gradient(124deg, rgba(85,1,194,1) 8%, rgba(0,170,255,1) 100%);
+    background: rgb(28,46,134);
+    background: linear-gradient(124deg, rgba(28,46,134,1) 0%, rgba(29,50,139,1) 25%, rgba(34,83,179,1) 60%, rgba(21,163,230,1) 91%, rgba(14,203,255,1) 100%);
     display: flex;
     flex-direction: column;
     justify-content: center;
