--- a/src/views/Process/Dashboard.scss
+++ b/src/views/Process/Dashboard.scss
@@ -152,7 +152,7 @@ svg {
 }
 
 .disp-center {
-  padding-top: 10%;
+  padding-top: 3%;
 }
 
 .font-class-2 {
@@ -285,6 +285,14 @@ svg {
   font-size: 1.3rem;
 }
 
+.section-title-font-size-2 {
+  font-family: 'B612';
+  font-size: 1.3rem;
+  margin-bottom: 3%;
+  margin-top: 5%;
+  color: black;
+}
+
 .card-act-prod.v-card {
   background-color: rgba($color: #7da7d9, $alpha: 0.2);
 }
@@ -301,4 +309,19 @@ h3 {
 .navbar-color {
   background: rgb(28,46,134);
   background: linear-gradient(124deg, rgba(28,46,134,1) 29%, rgba(45,144,255,1) 74%, rgba(14,203,255,1) 100%);
+}
+
+.add-btn-2 {
+  display: flex;
+  justify-content: left;
+  margin-left: 3%;
+  margin-top: 3%;
+  margin-top: 10%;
+}
+
+
+button.add-btn-inner.v-btn.v-btn--is-elevated {
+  background-color: #2a7ada;
+  color: white;
+  font-size: x-small;
 }
