--- a/src/views/Process/Dashboard.scss
+++ b/src/views/Process/Dashboard.scss
@@ -334,3 +334,7 @@ button.add-btn-inner.v-btn.v-btn--is-elevated {
   color: white;
   font-size: x-small;
 }
+
+.container.back-color.container--fluid {
+  padding: 1%;
+}
